Update SCENIC Inference 430 cells .ipynb

--- a/SCENIC Inference 430 cells .ipynb
+++ b/SCENIC Inference 430 cells .ipynb
@@ -4,7 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "3757bc36",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pip install pyscenic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08a5bdec",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -30,7 +44,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "82ac8b9e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -52,9 +68,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2e9900e1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "url = 'https://resources.aertslab.org/cistarget/motif2tf/motifs-v9-nr.hgnc-m0.001-o0.0.tbl'\n",
+    "urlretrieve(url,'motifs-v9-nr.hgnc-m0.001-o0.0.tbl' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1567895",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "url_='https://raw.githubusercontent.com/aertslab/pySCENIC/master/resources/hs_hgnc_tfs.txt'\n",
+    "urlretrieve(url_l,'hs_hgnc_tfs.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "59063618",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "DATABASES_GLOB = os.path.join(\"hg38_10kbp_up_10kbp_down_full_tx_v10_clust.genes_vs_motifs.rankings.feather\")\n",
@@ -67,19 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9de4e1a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#MOTIF_ANNOTATIONS_FNAME = os.path.join(RESOURCES_FOLDER, \"motifs-v9-nr.mgi-m0.001-o0.0.tbl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 62,
    "id": "b21024c9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ADJACENCIES_FNAME = os.path.join(\"adjacencies.tsv\")"
@@ -89,7 +125,9 @@
    "cell_type": "code",
    "execution_count": 78,
    "id": "8933c380",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "MODULES_FNAME = os.path.join(\"modules.p\")"
@@ -99,7 +137,9 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "ba3f109d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "MOTIFS_FNAME = os.path.join(\"motifs.csv\")"
@@ -109,7 +149,9 @@
    "cell_type": "code",
    "execution_count": 79,
    "id": "bdaf00e7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "REGULONS_FNAME = os.path.join(\"regulons.p\")"
@@ -119,7 +161,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "7d050cb7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -152,7 +196,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "4a6f8542",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -175,7 +221,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "23b5a7dd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -197,7 +245,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "449dea9a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "with open(OUT_TFS_HGNC_FNAME, 'wt') as f:\n",
@@ -413,6 +463,7 @@
     }
    ],
    "source": [
+    "#Glioblastoma source: https://singlecell.broadinstitute.org/single_cell/study/SCP10/glioblastoma-intra-tumor-heterogeneity\n",
     "filename = 'Glioblastoma_expressed_genes.txt'\n",
     "data1= pandas.read_table(filename, delimiter='\\t', header=0,index_col=0)\n",
     "data=data1.transpose()\n",
@@ -423,7 +474,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "65b61b89",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -444,7 +497,9 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "ccef0d9e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "tf_names = load_tf_names(MOTIFS_HGNC_FNAME)"
@@ -454,7 +509,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "133cdaf5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -475,7 +532,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "10d7c106",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -489,18 +548,20 @@
     }
    ],
    "source": [
-    "db_fnames = glob.glob(DATABASES_GLOB)\n",
-    "def name(fname):\n",
+    "#db_fnames = glob.glob(DATABASES_GLOB)\n",
+    "#def name(fname):\n",
     "    return os.path.splitext(os.path.basename(fname))[0]\n",
-    "dbs = [FeatherRankingDatabase(fname=fname, name=name(fname)) for fname in db_fnames]\n",
-    "dbs"
+    "#dbs = [FeatherRankingDatabase(fname=fname, name=name(fname)) for fname in db_fnames]\n",
+    "#dbs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
    "id": "12cee99a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -514,7 +575,7 @@
     }
    ],
    "source": [
-    "dbs"
+    "#dbs"
    ]
   },
   {
@@ -522,14 +583,16 @@
    "id": "4c4f1728",
    "metadata": {},
    "source": [
-    "Phase 1 Inference of co-expression modules"
+    "Phase I: Inference of co-expression modules"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
    "id": "d80f180f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -569,7 +632,9 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "79cb7674",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -654,7 +719,9 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "97ab1fee",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "adjancencies.to_csv(ADJACENCIES_FNAME, index=False, sep='\\t')\n",
@@ -673,7 +740,9 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "cc90fd9f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -697,7 +766,9 @@
    "cell_type": "code",
    "execution_count": 73,
    "id": "3b9ce3a1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "with open(MODULES_FNAME, 'wb') as f:\n",
@@ -719,7 +790,9 @@
    "cell_type": "code",
    "execution_count": 74,
    "id": "ea6e6f54",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df = prune2df(dbs, modules, MOTIFS_HGNC_FNAME)"
@@ -729,7 +802,9 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "dbd88021",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -917,7 +992,9 @@
    "cell_type": "code",
    "execution_count": 82,
    "id": "83739964",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df.to_csv(MOTIFS_FNAME)"
@@ -927,7 +1004,9 @@
    "cell_type": "code",
    "execution_count": 83,
    "id": "c8174d44",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -946,7 +1025,9 @@
    "cell_type": "code",
    "execution_count": 84,
    "id": "f6f0f3a8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "with open(REGULONS_FNAME, 'wb') as f:\n",
@@ -968,7 +1049,9 @@
    "cell_type": "code",
    "execution_count": 85,
    "id": "2f29ec1d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -986,9 +1069,7 @@
    "cell_type": "code",
    "execution_count": 86,
    "id": "3ce491c2",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
