--- a/Oligo/OG .ipynb
+++ b/Oligo/OG .ipynb
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b763dd3b",
+   "id": "91677fc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1bf1a5cb",
+   "id": "d7b8fb75",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd2e80a1",
+   "id": "e4ef42f1",
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Input data from \n",
+    "## https://singlecell.broadinstitute.org/single_cell/study/SCP12/oligodendroglioma-intra-tumor-heterogeneity\n",
     "#! curl \"https://singlecell.broadinstitute.org/single_cell/api/v1/bulk_download/generate_curl_config?accessions=SCP12&auth_code=vECFXlfo&directory=all&context=study\"  -o cfg.txt; curl -K cfg.txt && rm cfg.txt"
    ]
   },
@@ -316,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3145afae",
+   "id": "9db7d574",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d0ad3285",
+   "id": "6a94276d",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3db18672",
+   "id": "47c0550b",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b6453f06",
+   "id": "7534e62d",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "338909b5",
+   "id": "25a0a674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e7f6c19",
+   "id": "2e00e28a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3216ab81",
+   "id": "200770e6",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "674e6038",
+   "id": "f160352b",
    "metadata": {},
    "outputs": [
     {
@@ -478,14 +480,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1a0165",
+   "id": "27d2a0e5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "66c7ce2a",
+   "id": "5650ad67",
    "metadata": {},
    "source": [
     "join datasets"
@@ -494,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1705ae",
+   "id": "d1557090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f83c928",
+   "id": "75d22bf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f1f323c",
+   "id": "91733443",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e8fcda8",
+   "id": "20ffb910",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a520cdb",
+   "id": "0da2efc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a09b1e7e",
+   "id": "f16eb406",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0233d799",
+   "id": "4c893578",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1668afcb",
+   "id": "2f398135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f52b7adf",
+   "id": "af1501dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad8c471",
+   "id": "a67e8488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90192a41",
+   "id": "61149a36",
    "metadata": {},
    "source": [
     "Phase I: Inference of co-expression modules"
@@ -623,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "518d0a41",
+   "id": "4c04a559",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "846c3c62",
+   "id": "2348b3ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd8c3b5",
+   "id": "221d316b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "585aa762",
+   "id": "50cdc06c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17b89648",
+   "id": "0467517b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d4041b",
+   "id": "d0975b94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "787b6f0d",
+   "id": "abbda1a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3da3836b",
+   "id": "be46fa50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42f59e40",
+   "id": "2d16a367",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -714,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1153a53",
+   "id": "f0ac134a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -722,14 +724,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6510c23",
+   "id": "9a5afb24",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d31d792a",
+   "id": "bd69541c",
    "metadata": {},
    "source": [
     "Groups"
@@ -738,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7128ece",
+   "id": "53439361",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5dee176",
+   "id": "0c210a87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a969b34d",
+   "id": "41673b93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0353c38",
+   "id": "93076511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ae60e82",
+   "id": "99059df9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a23b3991",
+   "id": "4d141027",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ff5bef",
+   "id": "6d9f0911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f100eb35",
+   "id": "348f1267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b0c6ad",
+   "id": "a85f554d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "611db405",
+   "id": "153c3174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d19da3",
+   "id": "0bb6c8fd",
    "metadata": {},
    "source": [
     "### t-SNE"
@@ -859,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c666513",
+   "id": "8a719eb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc08530f",
+   "id": "7383dbe3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "767d4ff2",
+   "id": "3b253a3c",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c85d328",
+   "id": "51a0dcfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b1c7ec",
+   "id": "8dc95955",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90849043",
+   "id": "053bbe16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abc714fe",
+   "id": "1dadb79e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44bff09",
+   "id": "93fb1918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14214496",
+   "id": "d5de2a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e2c21b",
+   "id": "1e6d4f52",
    "metadata": {},
    "outputs": [],
    "source": [
